--- a/robuust.html
+++ b/robuust.html
@@ -6,14 +6,16 @@
       name="viewport"
       content="width=device-width,initial-scale=1"
     />
-    <title>
-        Toolgankelijkheid · Waarneembaar
-    </title>
+    <title>Toolgankelijkheid · Robuust</title>
     <link rel="stylesheet" href="../styles/style.css" />
     <link rel="stylesheet" href="../styles/mobile.css" />
     <link rel="stylesheet" href="../styles/tablet.css" />
     <link rel="stylesheet" href="../styles/desktop.css" />
-    <link rel="icon" type="image/png" href="./assets/va-favicon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assets/va-favicon.png"
+    />
   </head>
 
   <body>
@@ -131,58 +133,39 @@
         <div class="content">
           <h1>Selecteer een onderwerp</h1>
           <div class="subcat">
-            <button
-              class="subcat-btn"
-              data-id="article4_1"
-            >
+            <button class="subcat-btn" data-id="article4_1">
               4.1 Juiste HTML structuur
             </button>
-            <button
-              class="subcat-btn"
-              data-id="article4_2"
-            >
+            <button class="subcat-btn" data-id="article4_2">
               4.2 Gebruik spaties & tabs
             </button>
-            <button
-              class="subcat-btn"
-              data-id="article4_3"
-            >
+            <button class="subcat-btn" data-id="article4_3">
               4.3 Afbeeldingen met tekstalternatief
             </button>
-            <button
-              class="subcat-btn"
-              data-id="article4_4"
-            >
+            <button class="subcat-btn" data-id="article4_4">
               4.4 Afbeeldingen met omschreven link
             </button>
-            <button
-              class="subcat-btn"
-              data-id="article4_5"
-            >
+            <button class="subcat-btn" data-id="article4_5">
               4.5 Decoratieve afbeeldingen
             </button>
-            <button
-              class="subcat-btn"
-              data-id="article4_6"
-            >
+            <button class="subcat-btn" data-id="article4_6">
               4.6 Audio & video alternatieven
             </button>
-            <button
-              class="subcat-btn"
-              data-id="article4_7"
-            >
+            <button class="subcat-btn" data-id="article4_7">
               4.7 Visuele transscript
             </button>
-            <button
-            class="subcat-btn"
-            data-id="article4_8"
-          >
-            4.8 Gebruik echte tabellen
-          </button>
+            <button class="subcat-btn" data-id="article4_8">
+              4.8 Gebruik echte tabellen
+            </button>
           </div>
-          <article id="article4_1" class="content-item hide">
+          <article
+            id="article4_1"
+            class="content-item hide"
+          >
             <h1>
-              4.1 Is de juiste structuur van de tekst aangegeven via de editor van het CMS of in HTML-codes
+              4.1 Is de juiste structuur van de tekst
+              aangegeven via de editor van het CMS of in
+              HTML-codes
             </h1>
             <br />
             <span>
@@ -212,7 +195,12 @@
               <h2 class="uitleg">Uitleg</h2>
             </span>
             <p>
-              Als een website “onder water” goed in elkaar zit, dan is de basis voor toegankelijkheid gelegd. Ontwikkelaars kunnen in de technische standaard WCAG 2.1 meer lezen over technieken die gebruikt kunnen worden om aan de toegankelijkheidseisen te voldoen. 
+              Als een website “onder water” goed in elkaar
+              zit, dan is de basis voor toegankelijkheid
+              gelegd. Ontwikkelaars kunnen in de technische
+              standaard WCAG 2.1 meer lezen over technieken
+              die gebruikt kunnen worden om aan de
+              toegankelijkheidseisen te voldoen.
             </p>
             <br />
             <span>
@@ -241,12 +229,22 @@
               <h2 class="tip">Tip</h2>
             </span>
             <p>
-              Voor het bouwen van websites zijn internationale standaarden ontwikkeld. Door de standaarden te volgen gebruik je de code op de manier waarop deze bedoeld is. Hulptechnologieën sluiten aan bij de ze standaarden. 
+              Voor het bouwen van websites zijn
+              internationale standaarden ontwikkeld. Door de
+              standaarden te volgen gebruik je de code op de
+              manier waarop deze bedoeld is.
+              Hulptechnologieën sluiten aan bij de ze
+              standaarden.
             </p>
           </article>
-          <article id="article4_2" class="content-item hide">
+          <article
+            id="article4_2"
+            class="content-item hide"
+          >
             <h1>
-              4.2 Er zijn geen spaties of tabs gebruikt om kolommen, tabellen of speciale teksteffecten te maken. 
+              4.2 Er zijn geen spaties of tabs gebruikt om
+              kolommen, tabellen of speciale teksteffecten
+              te maken.
             </h1>
             <br />
             <span>
@@ -276,7 +274,14 @@
               <h2 class="uitleg">Uitleg</h2>
             </span>
             <p>
-              Als je wilt dat jouw tekst in kolommen of in een tabel verschijnt, gebruik dan niet de spatiebalk of de tab-toets om dit te doen, omdat dit de tekst onbegrijpelijk maakt voor bezoekers die gebruik maken van assistentietechnologie. Kolommen die op deze manier worden aangemaakt worden rij voor rij gelezen, niet kolom voor kolom.
+              Als je wilt dat jouw tekst in kolommen of in
+              een tabel verschijnt, gebruik dan niet de
+              spatiebalk of de tab-toets om dit te doen,
+              omdat dit de tekst onbegrijpelijk maakt voor
+              bezoekers die gebruik maken van
+              assistentietechnologie. Kolommen die op deze
+              manier worden aangemaakt worden rij voor rij
+              gelezen, niet kolom voor kolom.
             </p>
             <br />
             <span>
@@ -305,12 +310,19 @@
               <h2 class="tip">Tip</h2>
             </span>
             <p>
-              Tabellen moeten gemaakt worden met de tabelfuncties van de editor in het CMS. Voor kolommen en woorden met letters die verder uit elkaar staan, moet CSS gebruikt worden.
+              Tabellen moeten gemaakt worden met de
+              tabelfuncties van de editor in het CMS. Voor
+              kolommen en woorden met letters die verder uit
+              elkaar staan, moet CSS gebruikt worden.
             </p>
           </article>
-          <article id="article4_3" class="content-item hide">
+          <article
+            id="article4_3"
+            class="content-item hide"
+          >
             <h1>
-              4.3 Afbeeldingen die informatie overdragen hebben een tekstueel alternatief
+              4.3 Afbeeldingen die informatie overdragen
+              hebben een tekstueel alternatief
             </h1>
             <br />
             <span>
@@ -340,7 +352,13 @@
               <h2 class="uitleg">Uitleg</h2>
             </span>
             <p>
-              Door afbeeldingen te voorzien van een tekstueel alternatief maak je ze dus toegankelijk voor bezoekers die de afbeeldingen niet kunnen zien. Ook zoekmachines zoals Google maken gebruik van tekstalternatieven bij het indexeren van websites.
+              Door afbeeldingen te voorzien van een
+              tekstueel alternatief maak je ze dus
+              toegankelijk voor bezoekers die de
+              afbeeldingen niet kunnen zien. Ook
+              zoekmachines zoals Google maken gebruik van
+              tekstalternatieven bij het indexeren van
+              websites.
             </p>
             <br />
             <span>
@@ -369,12 +387,28 @@
               <h2 class="tip">Tip</h2>
             </span>
             <p>
-              Een tekstueel alternatief werkt alleen als de beschrijving adequaat is. In veel gevallen gaat het om ‘vertellen wat je ziet’. Soms gaat het juist om ‘vertellen wat dit doet’, bijvoorbeeld bij een button in een formulier. En als een afbeelding geen informatie toevoegt, is het beter ook geen tekstalternatief te geven. Denk goed na over de tekstuele beschrijving. Iemand die alleen de tekstalternatieven ziet zou de informatie nog steeds moeten kunnen begrijpen en de website nog steeds moeten kunnen gebruiken.
+              Een tekstueel alternatief werkt alleen als de
+              beschrijving adequaat is. In veel gevallen
+              gaat het om ‘vertellen wat je ziet’. Soms gaat
+              het juist om ‘vertellen wat dit doet’,
+              bijvoorbeeld bij een button in een formulier.
+              En als een afbeelding geen informatie
+              toevoegt, is het beter ook geen
+              tekstalternatief te geven. Denk goed na over
+              de tekstuele beschrijving. Iemand die alleen
+              de tekstalternatieven ziet zou de informatie
+              nog steeds moeten kunnen begrijpen en de
+              website nog steeds moeten kunnen gebruiken.
             </p>
           </article>
-          <article id="article4_4" class="content-item hide">
+          <article
+            id="article4_4"
+            class="content-item hide"
+          >
             <h1>
-              4.4 Afbeeldingen die als link worden gebruikt, hebben een alt-tekst die het doel van de link beschrijft. 
+              4.4 Afbeeldingen die als link worden gebruikt,
+              hebben een alt-tekst die het doel van de link
+              beschrijft.
             </h1>
             <br />
             <span>
@@ -404,7 +438,12 @@
               <h2 class="uitleg">Uitleg</h2>
             </span>
             <p>
-              Wanneer het niet duidelijk is welk ingevuld veld foutief is ingevuld kunnen gebruikers vastlopen. De alt-tekst beschrijft het doel of de richting van de afbeelding in plaats van de afbeelding zelf.              </p>
+              Wanneer het niet duidelijk is welk ingevuld
+              veld foutief is ingevuld kunnen gebruikers
+              vastlopen. De alt-tekst beschrijft het doel of
+              de richting van de afbeelding in plaats van de
+              afbeelding zelf.
+            </p>
             <br />
             <span>
               <svg
@@ -431,12 +470,24 @@
               </svg>
               <h2 class="tip">Tip</h2>
             </span>
-            Als de afbeelding in een link staat met een tekst erbij, dan is de afbeelding ook niet-informatief en ook dan volstaat een leeg alt-attribuut. De screenreader leest dan de linktekst op. Als de afbeelding aanklikbaar is en in de link staat geen tekst, dan gebruik je wel een alt-tekst en beschrijf je waar de afbeelding naartoe linkt.
+            <p>
+              Als de afbeelding in een link staat met een
+              tekst erbij, dan is de afbeelding ook
+              niet-informatief en ook dan volstaat een leeg
+              alt-attribuut. De screenreader leest dan de
+              linktekst op. Als de afbeelding aanklikbaar is
+              en in de link staat geen tekst, dan gebruik je
+              wel een alt-tekst en beschrijf je waar de
+              afbeelding naartoe linkt.
             </p>
           </article>
-          <article id="article4_5" class="content-item hide">
+          <article
+            id="article4_5"
+            class="content-item hide"
+          >
             <h1>
-              4.5 Decoratieve afbeeldingen kunnen door hulptechnologieën genegeerd worden. 
+              4.5 Decoratieve afbeeldingen kunnen door
+              hulptechnologieën genegeerd worden.
             </h1>
             <br />
             <span>
@@ -466,7 +517,10 @@
               <h2 class="uitleg">Uitleg</h2>
             </span>
             <p>
-              Decoratieve afbeeldingen zijn niet relevant voor gebruikers van hulptechnologieën. De decoratieve afbeeldingen mogen de begrijpelijkheid niet beïnvloeden.  
+              Decoratieve afbeeldingen zijn niet relevant
+              voor gebruikers van hulptechnologieën. De
+              decoratieve afbeeldingen mogen de
+              begrijpelijkheid niet beïnvloeden.
             </p>
             <br />
             <span>
@@ -495,12 +549,17 @@
               <h2 class="tip">Tip</h2>
             </span>
             <p>
-              Dit kan bijvoorbeeld door de alt-tekst leeg te laten. 
+              Dit kan bijvoorbeeld door de alt-tekst leeg te
+              laten.
             </p>
           </article>
-          <article id="article4_6" class="content-item hide">
+          <article
+            id="article4_6"
+            class="content-item hide"
+          >
             <h1>
-              4.6 Audio en video hebben een kort tekstueel alternatief dat de inhoud beschrijft. 
+              4.6 Audio en video hebben een kort tekstueel
+              alternatief dat de inhoud beschrijft.
             </h1>
             <br />
             <span>
@@ -530,7 +589,13 @@
               <h2 class="uitleg">Uitleg</h2>
             </span>
             <p>
-              Alle vormen van audio en video moeten een kort tekstalternatief krijgen. Dit is vergelijkbaar met de alt-tekst van afbeeldingen. Door deze korte tekst weten bezoekers die hulptechnologie gebruiken, ook als de audio of video zelf niet toegankelijk zou zijn, in ieder geval waar ze mee te maken hebben.
+              Alle vormen van audio en video moeten een kort
+              tekstalternatief krijgen. Dit is vergelijkbaar
+              met de alt-tekst van afbeeldingen. Door deze
+              korte tekst weten bezoekers die
+              hulptechnologie gebruiken, ook als de audio of
+              video zelf niet toegankelijk zou zijn, in
+              ieder geval waar ze mee te maken hebben.
             </p>
             <br />
             <span>
@@ -559,12 +624,18 @@
               <h2 class="tip">Tip</h2>
             </span>
             <p>
-              Hoe je dit alternatief plaatst hangt af van de techniek die gebruikt is om het multimediabestand op de webpagina te plaatsen.
+              Hoe je dit alternatief plaatst hangt af van de
+              techniek die gebruikt is om het
+              multimediabestand op de webpagina te plaatsen.
             </p>
           </article>
-          <article id="article4_7" class="content-item hide">
+          <article
+            id="article4_7"
+            class="content-item hide"
+          >
             <h1>
-              4.7 Filmpjes, bewegend beeld en audio hebben (indien nodig) een transcript.
+              4.7 Filmpjes, bewegend beeld en audio hebben
+              (indien nodig) een transcript.
             </h1>
             <br />
             <span>
@@ -594,7 +665,12 @@
               <h2 class="uitleg">Uitleg</h2>
             </span>
             <p>
-              In het transcript vertel je zo compleet mogelijk het verhaal van het filmpje. Je vertelt wat er gebeurt, dus wat er te zien en te horen is, en wat er gezegd wordt, door wie. Eventuele interactieve elementen neem je ook op in het transcript.
+              In het transcript vertel je zo compleet
+              mogelijk het verhaal van het filmpje. Je
+              vertelt wat er gebeurt, dus wat er te zien en
+              te horen is, en wat er gezegd wordt, door wie.
+              Eventuele interactieve elementen neem je ook
+              op in het transcript.
             </p>
             <br />
             <span>
@@ -623,12 +699,20 @@
               <h2 class="tip">Tip</h2>
             </span>
             <p>
-              Kun je in het filmpje bijvoorbeeld op een knop drukken, dan neem je in het transcript een link op naar de pagina waar je die actie kunt uitvoeren.
+              Kun je in het filmpje bijvoorbeeld op een knop
+              drukken, dan neem je in het transcript een
+              link op naar de pagina waar je die actie kunt
+              uitvoeren.
             </p>
           </article>
-          <article id="article4_8" class="content-item hide">
+          <article
+            id="article4_8"
+            class="content-item hide"
+          >
             <h1>
-              4.8 Informatie die in een tabel hoort, staat ook écht in een tabel en heeft de juiste HTML-code.
+              4.8 Informatie die in een tabel hoort, staat
+              ook écht in een tabel en heeft de juiste
+              HTML-code.
             </h1>
             <br />
             <span>
@@ -658,7 +742,18 @@
               <h2 class="uitleg">Uitleg</h2>
             </span>
             <p>
-              Gegevens in de tabel hebben zowel horizontaal als verticaal een relatie met elkaar. Met de juiste HTML-code kun je die relaties expliciet maken. Je geeft dan aan welke cellen koppen zijn en welke cellen gegevens bevatten. Bij complexe tabellen geef je ook nog eens aan welke kop precies bij welke cellen hoort. Bezoekers die hulptechnologie gebruiken hebben hier profijt van. Doordat de relaties in de code staan kan de hulptechnologie de informatie uit de tabel op een overzichtelijke en logische manier presenteren.
+              Gegevens in de tabel hebben zowel horizontaal
+              als verticaal een relatie met elkaar. Met de
+              juiste HTML-code kun je die relaties expliciet
+              maken. Je geeft dan aan welke cellen koppen
+              zijn en welke cellen gegevens bevatten. Bij
+              complexe tabellen geef je ook nog eens aan
+              welke kop precies bij welke cellen hoort.
+              Bezoekers die hulptechnologie gebruiken hebben
+              hier profijt van. Doordat de relaties in de
+              code staan kan de hulptechnologie de
+              informatie uit de tabel op een overzichtelijke
+              en logische manier presenteren.
             </p>
             <br />
             <span>
@@ -687,7 +782,13 @@
               <h2 class="tip">Tip</h2>
             </span>
             <p>
-              Sommige tabellen zitten heel ingewikkeld in elkaar, met meerdere niveaus en koppen. Het kan dan nodig zijn om code toe te voegen aan de tabel om de verbanden duidelijk te maken. Stel jezelf echter de vraag of de tabel niet kan worden vereenvoudigd of gesplitst in meerdere tabellen.
+              Sommige tabellen zitten heel ingewikkeld in
+              elkaar, met meerdere niveaus en koppen. Het
+              kan dan nodig zijn om code toe te voegen aan
+              de tabel om de verbanden duidelijk te maken.
+              Stel jezelf echter de vraag of de tabel niet
+              kan worden vereenvoudigd of gesplitst in
+              meerdere tabellen.
             </p>
           </article>
         </div>
